--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,10 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: [3.6, 3.7, 3.8]
+
+    runs-on: "${{ matrix.os }}"
 
     steps:
     - uses: actions/checkout@v2
