Actually install pdfcomments

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,11 +19,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies and tool
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           python -m pip install pytest
+          python setup.py develop
       - name: pytest
         run: |
           pytest
