Black format and check. Reorganise to allow for nicer command line errors

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,6 +3,18 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
+  black:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Black format
+      run: |
+        black -t py36 --check --diff **/*.py
+
   test:
     runs-on: ${{ matrix.os }}
     strategy:
