--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Install dependencies and tool
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest
+          python -m pip install pytest pytest-cov
           python setup.py develop
       - name: pytest
         run: |
-          pytest
+          pytest --cov=pdfcomments tests
