--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,10 +28,13 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip flake8 pep8-naming flake8-builtins flake8-bugbear flake8-import-order flake8-quotes flake8-docstrings flake8-mypy mypy
+        python -m pip install --upgrade pip flake8 pep8-naming flake8-builtins flake8-bugbear flake8-import-order flake8-quotes flake8-docstrings mypy
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Check code with mypy
+      run: |
+        mypy .
